- Dock system WIP - Repository refactor WIP - Improved Cesium settings & rendering quality - Refactored theme to use palettes - Misc. improvements

--- a/Desktop/packages/main/tsconfig.json
+++ b/Desktop/packages/main/tsconfig.json
@@ -16,6 +16,7 @@
     "paths": {
       "@vite-electron-builder/preload": ["../preload"],
       "@vite-electron-builder/renderer": ["../renderer"],
+      "@mjosdrone/dhlib/*": ["../drone-hub-lib/src/*"],
       "@shared/*": ["../shared/src/*"]
     }
   },
