--- a/Desktop/packages/drone-hub-lib/tsconfig.json
+++ b/Desktop/packages/drone-hub-lib/tsconfig.json
@@ -22,7 +22,7 @@
     /* Linting */
     "strict": false,
     "noUnusedLocals": false,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": false,
     "noUncheckedSideEffectImports": true,
 
