--- a/Desktop/packages/main/package.json
+++ b/Desktop/packages/main/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vite-electron-builder/preload": "*",
     "@vite-electron-builder/renderer": "*",
+    "@mjosdrone/dhlib": "*",
     "doc999tor-fast-geoip": "^1.1.190",
     "electron-updater": "6.3.9",
     "reflect-metadata": "^0.2.2",
