--- a/Desktop/packages/preload/package.json
+++ b/Desktop/packages/preload/package.json
@@ -15,6 +15,9 @@
       "default": "./dist/exposed.mjs"
     }
   },
+  "dependencies": {
+    "@mjosdrone/dhlib": "*"
+  },
   "devDependencies": {
     "@vite-electron-builder/electron-versions": "*",
     "mlly": "1.7.3",
